# hand

./: Cargo.toml  README.md  bacon.toml
.github/workflows/: ci.yml
crates/asm/: Cargo.toml
crates/asm/src/: bin.rs  error.rs  lib.rs
crates/cir/: Cargo.toml
crates/cir/src/: hand.rs  lib.rs  structured.rs  ual.rs
crates/cir/src/structured/: buffer.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/enc/: Cargo.toml
crates/enc/src/: encoder.rs  lib.rs  schema.rs  tests.rs  variable.rs  word.rs
crates/enc/src/tests/: data.rs  load_store.rs  multi_load_store.rs
crates/encode-proc/: Cargo.toml
crates/encode-proc/src/: lib.rs
crates/hand/: Cargo.toml
crates/hand/src/: ast.rs  error.rs  grammar.rs  lexer.rs  lib.rs  lowering.rs  syntax.rs
crates/hand/src/ast/: node.rs  token.rs  validate.rs
crates/intern/: Cargo.toml
crates/intern/src/: lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: cursor.rs  lib.rs
crates/matcher/: Cargo.toml
crates/matcher/src/: lib.rs  pattern.rs  template.rs  tests.rs  token.rs
crates/matcher/src/template/: hand.rs  ual.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/pattern-derive/: Cargo.toml
crates/pattern-derive/src/: lib.rs  pattern.rs  tests.rs
crates/structure-derive/: Cargo.toml
crates/structure-derive/src/: lib.rs
crates/ual/: Cargo.toml
crates/ual-derive/: Cargo.toml
crates/ual-derive/src/: attributes.rs  lib.rs  module.rs  process.rs  tokens.rs
crates/ual/src/: ast.rs  error.rs  grammar.rs  lexer.rs  lib.rs  lowering.rs  syntax.rs  tree.rs
instructions/: Cargo.toml  adc.toml  add.toml
instructions/src/: add.rs  adr.rs  branch.rs  cmp.rs  lib.rs
(+7 files in other folders)
