[package]
name = "asm"
version = "0.1.0"
edition = "2021"

[lib]
name = "asm"
path = "src/lib.rs"

[[bin]]
name = "hand-asm"
path = "src/bin.rs"
required-features = ["binary"]

[dependencies]
hand = { path = "../hand" }
cir = { path = "../cir" }
enc = { path = "../enc" }
matcher = { path = "../matcher" }
instructions = { path = "../../instructions" }

codespan-reporting = { version = "0.11" }
thiserror = { version = "1.0" }
anyhow = { version = "1.0", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }

[features]
binary = ["clap", "anyhow"]