[package]
name = "pattern-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.76", features = ["full"] }
proc-macro-error2 = "2.0.1"

[dev-dependencies]
prettyplease = "0.2.24"
cir = { path = "../cir" }
matcher = { path = "../matcher" }