[package]
name = "ual-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
ual = { path = "../ual" }
proc-macro2 = "1.0.86"
proc-macro-error = "1.0.4"
quote = "1.0.37"
miette = { version = "7.2", features = ["fancy"] }
syn = { version = "2.0.76", features = ["full"] }
proc-macro-crate = "3.2"